lightbox additions and mark down mods
attempted to add lightbox plugin, but not working. fixed some markdown to add links to websites.

--- a/prod/about.html
+++ b/prod/about.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>About</title>
   <link href="ui/styles.css" rel="stylesheet" />
+  <script src="//code.jquery.com/jquery-latest.js"></script>
+<script src="//cdn.rawgit.com/noelboss/featherlight/1.7.14/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
 </head>
 
 <body>
