--- a/prod/next.html
+++ b/prod/next.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Next Competition</title>
   <link href="ui/styles.css" rel="stylesheet" />
+  <script src="//code.jquery.com/jquery-latest.js"></script>
+<script src="//cdn.rawgit.com/noelboss/featherlight/1.7.14/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
 </head>
 
 <body>
@@ -25,9 +27,11 @@
 <article>
   <h1 id="upcoming-biathlon-competitions">Upcoming Biathlon Competitions</h1>
 <h2 id="ibu-cup-biathlon">IBU Cup Biathlon</h2>
-<p>Nov 25th - Dec 1st 2019 - Sjusjoen (ski village), Ringsaker (town), Hedmark (county), Norway (country)</p>
+<p>Nov 25th - Dec 1st 2019 - Sjusjoen (ski village), Ringsaker (town), Hedmark (county), Norway (country)
+<a href="https://www.biathlonworld.com/calendar/#/event-0">Click here for more details</a></p>
 <h2 id="noram-2">NorAm 2</h2>
-<p>Dec 14 - Dec 15th 2019 - Wes Yellowstone, Montana, USA</p>
+<p>Dec 14 - Dec 15th 2019 - Rendezvous Trails West, Yellowstone, Montana, USA
+<a href="https://www.teamusa.org/US-Biathlon/Events/2019/December/14/NorAm-Cup-2">Click here for more details</a></p>
 
 </article>
 
