--- a/prod/winners.html
+++ b/prod/winners.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Winners</title>
   <link href="ui/styles.css" rel="stylesheet" />
+  <script src="//code.jquery.com/jquery-latest.js"></script>
+<script src="//cdn.rawgit.com/noelboss/featherlight/1.7.14/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
 </head>
 
 <body>
@@ -24,12 +26,13 @@
   
 <article>
   <h1 id="biathlon-winners">Biathlon Winners</h1>
-<p>2010 Winter Olympics Womens - Tora Berger - Norway <img src="images/.jpg" alt="Tora Berger"></p>
+<p>2010 Winter Olympics Womens - Tora Berger - Norway <img src="images/Tora_Berger_2006.jpg" alt="Tora Berger"></p>
 <p>2010 Winter Olympics Mens - Emil Hegle Svendsen - Norway <img src="images/Emil_Hegle_Svendsen.JPG" alt="Emil Hegle Svendsen"></p>
 <p>2014 Winter Olympics Womens - Darya Domracheva - Belarus <img src="images/Darya_Domracheva_WCup_Oberhof_2018.jpg" alt="Darya Domracheva"></p>
 <p>2014 Winter Olympics Womens - Martin Fourcade - France <img src="images/Martin_Fourcade_octobre_2017.jpg" alt="Martin Fourcade"></p>
 <p>2018 Winter Olympics Womens - Hanna Öberg - Sweden <img src="images/Hanna_%C3%96berg_2017.jpg" alt="Hanna Öberg"></p>
 <p>2018 Winter Olympics Womens - Johannes Thingnes Bø - Norway <img src="images/Johannes_Thingnes_B%C3%B8_01_(cropped).jpg" alt="Johannes Thingnes Bø"></p>
+<p><a href="images/Tora_Berger_2006.jpg">images/Tora_Berger_2006.jpg</a></p>
 
 </article>
 
