--- a/prod/index.html
+++ b/prod/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Home</title>
   <link href="ui/styles.css" rel="stylesheet" />
+  <script src="//code.jquery.com/jquery-latest.js"></script>
+<script src="//cdn.rawgit.com/noelboss/featherlight/1.7.14/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
 </head>
 
 <body>
@@ -24,7 +26,7 @@
   
 <article>
   <h1 id="biathlon">Biathlon</h1>
-<p><strong>Cross Country Skiing with Guns</strong></p>
+<p><strong>Cross Country Skiing with Rifles</strong></p>
 
 </article>
 
