final touches added onto project

--- a/prod/next.html
+++ b/prod/next.html
@@ -27,7 +27,7 @@
 <article>
   <h1 id="upcoming-biathlon-competitions">Upcoming Biathlon Competitions</h1>
 <h2 id="ibu-cup-biathlon">IBU Cup Biathlon</h2>
-<p>Nov 25th - Dec 1st 2019 - Sjusjoen (ski village), Ringsaker (town), Hedmark (county), Norway (country)
+<p>Nov 25th - Dec 1st 2019 - Sjusjoen, Ringsaker, Hedmark, Norway
 <a href="https://www.biathlonworld.com/calendar/#/event-0">Click here for more details</a></p>
 <h2 id="noram-2">NorAm 2</h2>
 <p>Dec 14 - Dec 15th 2019 - Rendezvous Trails West, Yellowstone, Montana, USA
