--- a/prod/winners.html
+++ b/prod/winners.html
@@ -26,13 +26,18 @@
   
 <article>
   <h1 id="biathlon-winners">Biathlon Winners</h1>
-<p>2010 Winter Olympics Womens - Tora Berger - Norway <img src="images/Tora_Berger_2006.jpg" alt="Tora Berger"></p>
-<p>2010 Winter Olympics Mens - Emil Hegle Svendsen - Norway <img src="images/Emil_Hegle_Svendsen.JPG" alt="Emil Hegle Svendsen"></p>
-<p>2014 Winter Olympics Womens - Darya Domracheva - Belarus <img src="images/Darya_Domracheva_WCup_Oberhof_2018.jpg" alt="Darya Domracheva"></p>
-<p>2014 Winter Olympics Womens - Martin Fourcade - France <img src="images/Martin_Fourcade_octobre_2017.jpg" alt="Martin Fourcade"></p>
-<p>2018 Winter Olympics Womens - Hanna Öberg - Sweden <img src="images/Hanna_%C3%96berg_2017.jpg" alt="Hanna Öberg"></p>
-<p>2018 Winter Olympics Womens - Johannes Thingnes Bø - Norway <img src="images/Johannes_Thingnes_B%C3%B8_01_(cropped).jpg" alt="Johannes Thingnes Bø"></p>
-<p><a href="images/Tora_Berger_2006.jpg">images/Tora_Berger_2006.jpg</a></p>
+<h3 id="2010-winter-olympics-womens---tora-berger---norway">2010 Winter Olympics Womens - Tora Berger - Norway</h3>
+<p><img src="images/Tora_Berger_2006.jpg" alt="Tora Berger"></p>
+<h3 id="2010-winter-olympics-mens---emil-hegle-svendsen---norway">2010 Winter Olympics Mens - Emil Hegle Svendsen - Norway</h3>
+<p><img src="images/Emil_Hegle_Svendsen.JPG" alt="Emil Hegle Svendsen"></p>
+<h3 id="2014-winter-olympics-womens---darya-domracheva---belarus">2014 Winter Olympics Womens - Darya Domracheva - Belarus</h3>
+<p><img src="images/Darya_Domracheva_WCup_Oberhof_2018.jpg" alt="Darya Domracheva"></p>
+<h3 id="2014-winter-olympics-womens---martin-fourcade---france">2014 Winter Olympics Womens - Martin Fourcade - France</h3>
+<p><img src="images/Martin_Fourcade_octobre_2017.jpg" alt="Martin Fourcade"></p>
+<h3 id="2018-winter-olympics-womens---hanna-öberg---sweden">2018 Winter Olympics Womens - Hanna Öberg - Sweden</h3>
+<p><img src="images/Hanna_%C3%96berg_2017.jpg" alt="Hanna Öberg"></p>
+<h3 id="2018-winter-olympics-womens---johannes-thingnes-bø---norway">2018 Winter Olympics Womens - Johannes Thingnes Bø - Norway</h3>
+<p><img src="images/Johannes_Thingnes_B%C3%B8_01_(cropped).jpg" alt="Johannes Thingnes Bø"></p>
 
 </article>
 
